exports[`test <TabStack /> re-renders correctly when "replace" action is called 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail">
  Index
</Text>
`;

exports[`test <TabStack /> re-renders correctly when "replace" action is called 2`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail">
  Hello
</Text>
`;

exports[`test <TabStack /> re-renders correctly when onRequestChangeTab() method is called 1`] = `
<View
  onPress={[Function]}>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail">
    Index
  </Text>
</View>
`;

exports[`test <TabStack /> re-renders correctly when onRequestChangeTab() method is called 2`] = `
<View
  onPress={[Function]}>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail">
    Goodbye
  </Text>
</View>
`;

exports[`test <TabStack /> renders correctly 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail">
  Index
</Text>
`;

exports[`test <TabStack /> renders correctly with initialEntries prop  1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail">
  Hello
</Text>
`;
